# agent-team-v18

./: .env.example  .gitignore  .mcp.json  API_BROKER_DISCOVERY_REPORT.md  ARCHITECTURE_REPORT.md  AUDIT_FORENSICS.md  AUDIT_PROOF_REPORT.md  AUDIT_TEAM_DESIGN.md  AUDIT_UPGRADE_DESIGN.md  BUILD2_ARCHITECTURE_REPORT.md  BUILD2_FINAL_REPORT.md  BUILDER_ARCHITECTURE_MAP.md  BUILDER_PERFECTION_IMPLEMENTATION.md  BUILDER_PERFECTION_PLAN.md  BUILDER_PERFECTION_REPORT.md  CODEX_HYBRID_FEASIBILITY.md  CRITICAL_FIX_REPORT.md  DEEP_OPTIMIZATION_REPORT.md  FAILURE_RECOVERY_RESULTS.md  FEATURE_ACTIVATION_MATRIX.md  FINAL_CLEANUP_REPORT.md  FINAL_HARDENING_REPORT.md  HANDOFF_DOCUMENT.md  HARDENING_ROUND2_FIXES.md  INTERFACE_AUDIT.md  ISOLATED_TO_TEAM_PROOF.md  KICKOFF_PROMPT.md  KICKOFF_SKILLS_OPTIMIZATION.md  MASTER_IMPLEMENTATION_PLAN_v2.md  MCP_AUDIT.md  PERFECTION_REVIEW_REPORT.md  PHASE2A_VERIFICATION.md  PHASE2B_VERIFICATION.md  PHASE2C_VERIFICATION.md  PHASE2D_VERIFICATION.md  PHASE4_WIRING_REPORT.md  PHASE_FINAL_EXIT_CRITERIA.md  PHASE_G_IMPLEMENTATION.md  PHASE_G_INVESTIGATION.md  PIPELINE_SIMULATION.md  (+42 more)
.claude/: settings.local.json
data/: contracts.db-shm  contracts.db-wal  symbols.db-shm  symbols.db-wal
docs/: AGENT_TEAMS_ACTIVATION.md  PHASE_F_ARCHITECTURE_CONTEXT.md  PHASE_F_COVERAGE_MATRIX.md  SCAFFOLD_OWNERSHIP.md  session-validation-template.md  stack-contracts.md
facility_management_run/: AUDIT_REPORT_OWNER_DASHBOARD_DOCS.md  ArkanPM_FEATURES.md  CONTRACT_AUDIT_REPORT.md  FINAL_TEST_REPORT.md  ROOT_CAUSE_ANALYSIS.md  SESSION_4_KICKOFF_PROMPT.md  (+7 more)
(+1210 files in other folders)
