[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-team-v15"
version = "15.0.0"
description = "Agent Team v15 — Convergence-driven multi-agent orchestration system using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Omar Khaled"},
]

dependencies = [
    "claude-agent-sdk>=0.1.26",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "python-dotenv>=1.0",
]

[project.scripts]
agent-team-v15 = "agent_team_v15.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m \"not codex_live\""
markers = [
    "e2e: end-to-end tests requiring real API keys",
    "integration: cross-module integration tests",
    "codex_live: requires live codex app-server; skipped by default, run with -m codex_live",
]

[tool.setuptools.packages.find]
where = ["src"]
